[package]
name = "onnxruntime"
version = "0.1.0"
authors = ["Basile Henry <bjm.henry@gmail.com>", "Chris Chalmers <c.chalmers@me.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4"
structopt = "0.3.14"
crossbeam = "0.7.3"

[dev-dependencies]
image = "0.23.6"

[build-dependencies]
bindgen = "0.56"
heck = "0.3"
